2010-10-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnmbox.el (nnmbox-read-mbox): Mark buffer for deletion on Gnus exit.
	Suggested by Dan Jacobson.

	* mm-encode.el (mm-content-transfer-encoding-defaults): Try to make the
	documentation clearer.

	* message.el (message-shorten-references): Comment on the number "21".
	Suggested by Stefan Monnier.

	* gnus-sum.el (gnus-summary-scroll-up): Add more documentation.
	Suggested by Dan Jacobson.

	* gnus.el (gnus-large-newsgroup): Mention
	gnus-large-ephemeral-newsgroup.  Suggested by Dan Jacobson.

	* gnus-msg.el (gnus-summary-resend-message): When resending, don't
	externalize attachments.  Bug reported by Steve Wen.

	* gnus.el (gnus-continuum-version): Make inactive, since it doesn't
	really message anything to the user.

	* nnmail.el (nnmail-article-group): Allow using the fancy split method
	directly.

	* nnimap.el (nnimap-request-group): Low higher than high to signal no
	messages in empty groups.

2010-10-01  Ted Zlatanov  <tzz@lifelogs.com>

	* nnimap.el (nnimap-request-group): Don't bug out when there's an empty
	non-UIDNEXT group.

2010-10-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-completing-read): Return the symbol name,
	not the value from the collection.

	* nnimap.el (nnimap-update-info): Ignore groups that have no UIDNEXT
	values.  This sometimes happens on some groups that have no info.
	(nnimap-request-newgroups): New function.

2010-10-01  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-install-nnregistry): Move the feature
	check into `gnus-registry-initialize'.
	(gnus-registry-initialize): Ditto.
	Fix and extend header docs.

2010-10-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-prefetch-images): Adjust regexp to avoid
	regexp backtrace overflows.

	* nnimap.el (nnimap-extend-tls-programs): Only extend those programs
	for starttls that tls.el implements; i.e. openssl.
